--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current development release is relax version 1.3.2.</p>
+      <p>The current development release is relax version 1.3.3.</p>
 
       <p>The current stable release is relax version 1.2.15.</p>
 
@@ -99,16 +99,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4688033</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>999f4f161f6d814d60aae0e6f97fd55e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4694093</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>d09be7a7ed7c1cc42bf057e2b63893a7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4739128</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>b5643dd0cf34a117d23d6420ad1caf9f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4753022</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
@@ -157,10 +157,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip" title="relax">relax-1.3.2.Win32.zip</a></td>
-      <td><tt><small>00f58d3a783cb3a02e5b32ae0e448973</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5149225</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip" title="relax">relax-1.3.3.Win32.zip</a></td>
+      <td><tt><small>ed89aed4660361a7ef474d90d7a5c67b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5174384</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.Win32.zip" title="relax">relax-1.2.15.Win32.zip</a></td>
@@ -239,10 +239,10 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2" title="relax">relax-1.3.2.src.tar.bz2</a></td>
-      <td><tt><small>b4ef915dfc3981a15607124f0513e120</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4732593</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2" title="relax">relax-1.3.3.src.tar.bz2</a></td>
+      <td><tt><small>1ab43859327d3d6623a0bc8fcf64ee38</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4746723</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.src.tar.bz2" title="relax">relax-1.2.15.src.tar.bz2</a></td>
@@ -253,10 +253,10 @@
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.src.zip</a></td>
-      <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5158052</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip" title="relax">relax-1.3.3.src.zip</a></td>
+      <td><tt><small>505f2ad7b93e59144c250d9143006f3a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5183341</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.src.zip" title="relax">relax-1.2.15.src.zip</a></td>
@@ -311,34 +311,34 @@
     </tr>
     <tr><td><em>1.3 development line</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4688033</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>999f4f161f6d814d60aae0e6f97fd55e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4694093</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>d09be7a7ed7c1cc42bf057e2b63893a7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4739128</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>b5643dd0cf34a117d23d6420ad1caf9f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4753022</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip" title="relax">relax-1.3.2.Win32.zip</a></td>
-      <td><tt><small>00f58d3a783cb3a02e5b32ae0e448973</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5149225</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip" title="relax">relax-1.3.3.Win32.zip</a></td>
+      <td><tt><small>ed89aed4660361a7ef474d90d7a5c67b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5174384</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2" title="relax">relax-1.3.2.src.tar.bz2</a></td>
-      <td><tt><small>b4ef915dfc3981a15607124f0513e120</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4732593</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2" title="relax">relax-1.3.3.src.tar.bz2</a></td>
+      <td><tt><small>1ab43859327d3d6623a0bc8fcf64ee38</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4746723</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip" title="relax">relax-1.3.2.src.zip</a></td>
-      <td><tt><small>a5e712cbaf7ca0706597382755a5a926</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.2.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>5158052</td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip" title="relax">relax-1.3.3.src.zip</a></td>
+      <td><tt><small>505f2ad7b93e59144c250d9143006f3a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5183341</td>
     </tr>
 
     <tr><td><em>Stable 1.2 line</em></td></tr>
@@ -416,6 +416,38 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.3.3</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>999f4f161f6d814d60aae0e6f97fd55e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4694093</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>b5643dd0cf34a117d23d6420ad1caf9f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4753022</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip" title="relax">relax-1.3.3.Win32.zip</a></td>
+      <td><tt><small>ed89aed4660361a7ef474d90d7a5c67b</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5174384</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2" title="relax">relax-1.3.3.src.tar.bz2</a></td>
+      <td><tt><small>1ab43859327d3d6623a0bc8fcf64ee38</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4746723</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip" title="relax">relax-1.3.3.src.zip</a></td>
+      <td><tt><small>505f2ad7b93e59144c250d9143006f3a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5183341</td>
     </tr>
 
     <tr><td><em>Version 1.3.2</em></td></tr>
