--- a/download.html
+++ b/download.html
@@ -172,10 +172,9 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2.msi">python-2.6.2.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.2/python-2.6.2.msi">python-2.6.2.msi</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
-            <li><a href="http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro">pyreadline</a>: <a href="http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe">pyreadline-1.3.win32.exe</a></li>
-            <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
+            <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
           </ul>
 
           <p>For the 1.3 releases, the following dependencies are also needed.</p>
