--- a/download.html
+++ b/download.html
@@ -350,7 +350,7 @@
       <td>18340969</td>
     </tr>
 
-    <tr><td><em>Version 1.3.13 (2011-11-14)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2308">Version 1.3.13</a> (2011-11-14)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.13.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>5655a892e4181de175b09be67a8d8506</small></tt></td>
@@ -388,7 +388,7 @@
       <td>18324405</td>
     </tr>
 
-    <tr><td><em>Version 1.3.12 (2011-08-22)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2295">Version 1.3.12</a> (2011-08-22)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.12.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.12.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>e733724e650145e82be68d282bfe50a7</small></tt></td>
@@ -419,7 +419,7 @@
       <td><a href="http://download.gna.org/relax/relax-1.3.12.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>13060758</td>
     </tr>
-    <tr><td><em>Version 1.3.11 (2011-08-12)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2292">Version 1.3.11</a> (2011-08-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.11.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7c5f9aaf87d7c77d036d7b7ccae8bfb2</small></tt></td>
@@ -451,7 +451,7 @@
       <td>13028854</td>
     </tr>
 
-    <tr><td><em>Version 1.3.10 (2011-02-18)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2260">Version 1.3.10</a> (2011-02-18)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.10.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>277c03e8cc6a9429615fa6bdde9e23da</small></tt></td>
@@ -483,7 +483,7 @@
       <td>11656134</td>
     </tr>
 
-    <tr><td><em>Version 1.3.9 (2011-01-26)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2256">Version 1.3.9</a> (2011-01-26)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.9.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>700e8e5b8f87ea3d29cf82bacc7a81a6</small></tt></td>
@@ -515,7 +515,7 @@
       <td>11600518</td>
     </tr>
  
-    <tr><td><em>Version 1.3.8 (2011-01-20)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2255">Version 1.3.8</a> (2011-01-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.8.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.8.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>72c144483ccd2baa8e585bb039be372d</small></tt></td>
@@ -547,7 +547,7 @@
       <td>7297723</td>
     </tr>
 
-    <tr><td><em>Version 1.3.7 (2011-01-10)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2253">Version 1.3.7</a> (2011-01-10)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.7.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.7.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7c633fdd4b371881100c97c408fa36af</small></tt></td>
@@ -579,7 +579,7 @@
       <td>7105691</td>
     </tr>
 
-  <tr><td><em>Version 1.3.6 (2010-12-31)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2251">Version 1.3.6</a> (2010-12-31)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.6.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.6.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>54ea26d666a5bbd97ab369ade66a574a</small></tt></td>
@@ -611,7 +611,7 @@
       <td>7097715</td>
     </tr>
 
-    <tr><td><em>Version 1.3.5 (2010-05-21)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2205">Version 1.3.5</a> (2010-05-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.5.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>ed54f192648ff6ed81cb0488e5c5c101</small></tt></td>
@@ -643,7 +643,7 @@
       <td>5658255</td>
     </tr>
 
-    <tr><td><em>Version 1.3.4 (2009-08-12)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2108">Version 1.3.4</a> (2009-08-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>04d3fd17831fd924d112d56f42013782</small></tt></td>
@@ -675,7 +675,7 @@
       <td>5372921</td>
     </tr>
 
-    <tr><td><em>Version 1.3.3 (2008-11-29)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2003">Version 1.3.3</a> (2008-11-29)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.3.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>999f4f161f6d814d60aae0e6f97fd55e</small></tt></td>
@@ -707,7 +707,7 @@
       <td>5183341</td>
     </tr>
 
-    <tr><td><em>Version 1.3.2 (2008-10-08)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1973">Version 1.3.2</a> (2008-10-08)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.2.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>ac6d9e028627bcf1d7f844d5af16b050</small></tt></td>
@@ -740,7 +740,7 @@
     </tr>
 
 
-    <tr><td><em>Version 1.3.1 (2008-09-28)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1965">Version 1.3.1</a> (2008-09-28)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
@@ -772,7 +772,7 @@
       <td>5098404</td>
     </tr>
 
-    <tr><td><em>Version 1.3.0 (2007-02-19)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1491">Version 1.3.0</a> (2007-02-19)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
@@ -812,7 +812,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.2.15 (2008-11-27)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2001">Version 1.2.15</a> (2008-11-27)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.15.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.15.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>546e7b8cffed5e55f176a5f3c1edd382</small></tt></td>
@@ -844,7 +844,7 @@
       <td>4599482</td>
     </tr>
 
-    <tr><td><em>Version 1.2.14 (2008-08-09)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1939">Version 1.2.14</a> (2008-08-09)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
@@ -876,7 +876,7 @@
       <td>4597884</td>
     </tr>
 
-    <tr><td><em>Version 1.2.13 (2008-04-19)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1872">Version 1.2.13</a> (2008-04-19)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>97a1608e5a37a88e41eb590f97f0c670</small></tt></td>
@@ -908,7 +908,7 @@
       <td>4564801</td>
     </tr>
 
-    <tr><td><em>Version 1.2.12 (2007-11-17)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1762">Version 1.2.12</a> (2007-11-17)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
@@ -934,7 +934,7 @@
       <td>4537636</td>
     </tr>
 
-    <tr><td><em>Version 1.2.11 (2007-10-21)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1736">Version 1.2.11</a> (2007-10-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>87fc5dbebc87911393d124fb36c9e52f</small></tt></td>
@@ -966,7 +966,7 @@
       <td>4543086</td>
     </tr>
 
-    <tr><td><em>Version 1.2.10 (2007-01-12)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1454">Version 1.2.10</a> (2007-01-12)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
@@ -992,7 +992,7 @@
       <td>4529561</td>
     </tr>
 
-    <tr><td><em>Version 1.2.9 (2006-11-09)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1380">Version 1.2.9</a> (2006-11-09)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f719cc0a9fd8b710e28d1c2a5d597aa7</small></tt></td>
@@ -1018,7 +1018,7 @@
       <td>3838688</td>
     </tr>
 
-    <tr><td><em>Version 1.2.8 (2006-11-04)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1373">Version 1.2.8</a> (2006-11-04)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.8.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.8.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f9b374a51ebc67e5d0fb4880c55c7178</small></tt></td>
@@ -1044,7 +1044,7 @@
       <td>3838480</td>
     </tr>
 
-    <tr><td><em>Version 1.2.7 (2006-09-18)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1309">Version 1.2.7</a> (2006-09-18)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.7.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.7.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>d6ebbdcad1bd74c6996da8f71f2e3c3d</small></tt></td>
@@ -1070,7 +1070,7 @@
       <td>3777870</td>
     </tr>
 
-    <tr><td><em>Version 1.2.6 (2006-07-21)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1254">Version 1.2.6</a> (2006-07-21)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.6.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.6.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>b76909907498fcf35808bfe283b8b0be</small></tt></td>
@@ -1084,7 +1084,7 @@
       <td>3569737</td>
     </tr>
 
-    <tr><td><em>Version 1.2.5 (2006-07-20)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1253">Version 1.2.5</a> (2006-07-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.5.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.5.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>6b71bef84131920fc750c9adda06496f</small></tt></td>
@@ -1098,7 +1098,7 @@
       <td>3568111</td>
     </tr>
 
-    <tr><td><em>Version 1.2.4 (2006-05-02)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1163">Version 1.2.4</a> (2006-05-02)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.4.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>af8525cd14611f11392f3fe1846540f4</small></tt></td>
@@ -1112,7 +1112,7 @@
       <td>1956355</td>
     </tr>
 
-    <tr><td><em>Version 1.2.3 (2006-03-02)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1092">Version 1.2.3</a> (2006-03-02)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.3.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.3.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f1d1ebee86b8cb1ab8674e56ae1a7c4b</small></tt></td>
@@ -1126,7 +1126,7 @@
       <td>1634574</td>
     </tr>
 
-    <tr><td><em>Version 1.2.2 (2006-02-20)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1082">Version 1.2.2</a> (2006-02-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.2.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.2.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>220e1cc6d434fd944e4053539e6a016c</small></tt></td>
@@ -1140,7 +1140,7 @@
       <td>1771018</td>
     </tr>
 
-    <tr><td><em>Version 1.2.1 (2006-01-20)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1050">Version 1.2.1</a> (2006-01-20)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>3a1ebc7cff791e549634d2f731d306f0</small></tt></td>
@@ -1154,7 +1154,7 @@
       <td>1607384</td>
     </tr>
 
-    <tr><td><em>Version 1.2.0 (2006-01-14)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1043">Version 1.2.0</a> (2006-01-14)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>3227641fc48afddc1156e3aba0719a1b</small></tt></td>
@@ -1182,7 +1182,7 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
 
-    <tr><td><em>Version 1.0.10 (2006-01-14)</em></td></tr>
+    <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=1044">Version 1.0.10</a> (2006-01-14)</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.0.10.tar.bz2" title="relax">relax-1.0.10.tar.bz2</a></td>
       <td><tt><small>3542fde96bd06190f3b99f40e56e31c4</small></tt></td>
