--- a/windows_devel.html
+++ b/windows_devel.html
@@ -208,11 +208,11 @@
 
      <h3 id="MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVC compiler on 64-bit MS Windows)</h3>
 
-      <p>A similar error message is seen if you use the 32-bit MSVC compiler on 64-bit MS Windows.  You will probably see the error:</p>
+      <p>A similar error message is seen if you use the 32-bit MSVC compiler on 64-bit MS Windows.  This is for all SCons versions &#060;= 2.3.0.  After typing 'scons', you will see the error:</p>
 
       <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
 
-      <p>This is caused by a <a href="http://scons.tigris.org/issues/show_bug.cgi?id=2849">bug in the SCons program that the SCons developers stubbornly refuse to fix</a>.  The fix is quite simple, just find the Tools/MSCommon/vc.py or Tool/MSCommon/vc.py file in your installed SCons version.  Find the msvc_find_valid_batch_script() function in that file.  Then change the line:</p>
+      <p>This is caused by a <a href="http://scons.tigris.org/issues/show_bug.cgi?id=2849">bug in the SCons program</a>.  The fix is quite simple, just find the Tools/MSCommon/vc.py or Tool/MSCommon/vc.py file in your installed SCons version.  Find the msvc_find_valid_batch_script() function in that file.  Then change the line:</p>
       <ul class="code_ul">
        <li>if not req_target_platform and target_platform in ('amd64','x86_64'):</li>
       </ul>
@@ -222,6 +222,8 @@
       <ul class="code_ul">
        <li>if target_platform in ('amd64','x86_64'):</li>
       </ul>
+
+      <p>However the best option is to upgrade to SCons version 2.3.1 or higher.</p>
 
    </div>
   </div>
